--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,14 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: |
+        dotnet restore money/fs-money.sln
+        dotnet restore syntax/fs-syntax.sln
     - name: Build
-      run: dotnet build --no-restore
+      run: |
+        dotnet build --no-restore money/fs-money.sln
+        dotnet build --no-restore syntax/fs-syntax.sln
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: |
+        dotnet test --no-build --verbosity normal money/fs-money.sln
+        dotnet test --no-build --verbosity normal syntax/fs-syntax.sln
