--- a/syntax/fs-syntax.fsproj
+++ b/syntax/fs-syntax.fsproj
@@ -13,11 +13,16 @@
 
     <ItemGroup>
         <Compile Include="AssertSyntaxTests.fs" />
+        <Content Include="allureConfig.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Allure.Commons" Version="3.5.0.73" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
         <PackageReference Include="NUnit" Version="3.13.3" />
+        <PackageReference Include="NUnit.Allure" Version="1.2.1.1" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.3.0" />
         <PackageReference Include="NUnit.Analyzers" Version="3.5.0">
           <PrivateAssets>all</PrivateAssets>
