--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -48,3 +48,56 @@ jobs:
       - name: Test
         run: |
           dotnet test --no-build --verbosity normal syntax/fs-syntax.sln
+
+  environment-data:
+    runs-on: ubuntu-latest
+    if: always()
+    needs:
+      - fs-money
+      - fs-syntax
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/allure-prep
+      - uses: ./.github/actions/allure-upload
+        if: always()
+        with:
+          folder-name: report/allure-results
+
+  allure:
+    runs-on: ubuntu-latest
+    if: always()
+    needs: environment-data
+    steps:
+      - name: Download all workflow run artifacts
+        uses: actions/download-artifact@v3
+
+      - name: Get Allure history
+        uses: actions/checkout@v3
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+
+      # - name: Allure Report with history
+      #   uses: simple-elf/allure-report-action@v1.5
+      #   if: always()
+
+      - name: Allure Report action from marketplace
+        # uses: neonlabsorg/allure-report-action@master
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        with:
+          allure_results: allure-results
+          gh_pages: gh-pages
+          allure_report: allure-report
+          allure_history: allure-history
+          keep_reports: 25
+
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: allure-history
