--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,6 +16,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: ./.github/actions/allure-prep
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
@@ -35,6 +36,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: ./.github/actions/allure-prep
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
