--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -104,7 +104,18 @@ jobs:
         uses: simple-elf/allure-report-action@master
         if: always()
         with:
-          allure_results: allure-results
+          allure_results: allure-results-01
+          gh_pages: gh-pages
+          allure_report: allure-report
+          allure_history: allure-history
+          keep_reports: 25
+
+      - name: Allure Report action from marketplace
+        # uses: neonlabsorg/allure-report-action@master
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        with:
+          allure_results: allure-results-02
           gh_pages: gh-pages
           allure_report: allure-report
           allure_history: allure-history
